Matin/Fix: alignment changed back to previous commit because it is affecting currency selector modal

--- a/packages/core/src/sass/currency-select-radio.scss
+++ b/packages/core/src/sass/currency-select-radio.scss
@@ -97,8 +97,8 @@
 
 .currency-hr {
     height: 2px;
-    margin: 1.6rem 0 0;
-    width: 100%;
+    margin: 1.6rem auto;
+    width: 90%;
     border-top: 1px solid var(--general-section-1);
 
     @include mobile {
